Add health points to player. Shockwaves now inflict damages. Display hp amount on top left of screen.

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,18 @@
       text-align: right;
       font-size: 1.5em;
     }
+    .hp{
+        z-index:5;position: absolute;
+        padding-top:10px;
+        padding-left:10px;
+        left:0;
+        text-align:left;
+        font-size:1.5em;
+    }
   </style>
 <body>
 <span id="players" class="players"></span>
+<span id="hp" style="" class="hp"></span>
 <script src="/lib/require.js"></script>
 <script src="src/game.js"></script>
 </body>
