Do not connect player immediately. Show a text input to choose a name, and a play button to start playing. Need to find a way to display other players (and self) name ingame.

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,11 @@
     }
   </style>
 <body>
+<span id="name"></span>
 <span id="players" class="players"></span>
 <span id="hp" style="" class="hp"></span>
+<input id="pseudo">
+<button onclick="play();" id="play_button">play</button>
 <script src="/lib/require.js"></script>
 <script src="src/game.js"></script>
 </body>
