--- a/public/index.html
+++ b/public/index.html
@@ -2,43 +2,22 @@
 <head>
     <script src="lib/quintus-all.js"></script>
     <script src="socket.io/socket.io.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/concise.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/concise.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="css/colors.css"/>
 </head>
-<style>
-    .players {
-      z-index: 5;
-      position: absolute;
-      padding-top: 10px;
-      padding-right: 10px;
-      right: 0;
-      text-align: right;
-      font-size: 1.5em;
-    }
-    .hp{
-        z-index:5;position: absolute;
-        padding-top:10px;
-        padding-left:10px;
-        left:0;
-        text-align:left;
-        font-size:1.5em;
-    }
-  </style>
 <body>
-<div id="modal" class="modal">
-    <div class="modal-container">
-        <div class="modal-header">
-            Modal Header
-            <a href="#close" class="modal-close">&times;</a>
+<div id="modal" class="login_box_back">
+    <div class="login_box_container">
+        <div class="modal-header primary-background white-foreground">
+            IO GAME : Join the game !
         </div>
         <div class="modal-body">
-            <input id="pseudo">
-            <button onclick="play();" id="play_button">play</button>
+            <input id="pseudo" placeholder="Choose a nickname...">
+            <button onclick="play();" id="play_button" class="big_button accent-background hover_primary">play</button>
         </div>
     </div>
 </div>
-<a href="#modal">open</a>
-<span id="name"></span>
-<span id="hp" style="" class="hp"></span>
 <script src="/lib/require.js"></script>
 <script src="src/game.js"></script>
 </body>
