Show a modal when dead to allow the player to reload the page (and it also tells the player that she/he is dead).

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
         </div>
     </div>
 </div>
+<div id="death-modal" class="login_box_back" style="visibility:hidden">
+    <div class="login_box_container">
+        <div class="modal-header primary-background white-foreground">
+            Game over !
+        </div>
+        <div class="modal-body">
+            <button onclick="location.reload();" id="reload-button" class="big_button accent-background hover_primary">play</button>
+        </div>
+    </div>
+</div>
 <script src="/lib/require.js"></script>
 <script src="src/game.js"></script>
 </body>
