Add a UI to the game. Remove name and hp amount under the player (but unchanged for ennemies) and replace it with a life bar and pseudo in the bottom centre of the page.

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,17 @@
         </div>
     </div>
 </div>
+<div container class="UI_Player">
+    <div row>
+        <h2 id="player_name"></h2>
+    </div>
+    <div row>
+        <div id="lifebar" class="progress progress--large primary-background" style="visibility:hidden">
+            <span id="life_amount" class="accent-background" style="width: 100%">HP</span>
+        </div>
+    </div>
+</div>
+
 <script src="/lib/require.js"></script>
 <script src="src/game.js"></script>
 </body>
