Add a slow life regen over time, and display a progress bar for cooldown.

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,12 @@
             <span id="life_amount" class="accent-background" style="width: 100%">HP</span>
         </div>
     </div>
+    <div row>
+        <div id="cooldown_display" class="progress progress--striped progress--animate"
+             style="visibility:hidden">
+            <span id="cooldown_progress" style="width:100%" class="primary-background">COOLDOWN</span>
+        </div>
+    </div>
 </div>
 
 <script src="/lib/require.js"></script>
