Remove useless lifebars for ennemies, add a score system, needs to be rewritten (serverside, not clientside).

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" type="text/css" href="css/colors.css"/>
 </head>
 <body>
+<div id="scoreboard">
+    <ul>
+        <li id="score_row_1"></li>
+        <li id="score_row_2"></li>
+        <li id="score_row_3"></li>
+        <li id="score_row_4"></li>
+        <li id="score_row_5"></li>
+    </ul>
+</div>
 <div id="modal" class="login_box_back">
     <div class="login_box_container">
         <div class="modal-header primary-background white-foreground">
