Score system redone. The score system is now handled by server. Sending individual score when changes are made only to the player that scored some points, then send the leaderboard to everyone.

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,9 @@
             <span id="cooldown_progress" style="width:100%" class="primary-background">COOLDOWN</span>
         </div>
     </div>
+    <div row>
+        <h5 id="own_score">SCORE : <span id="score_amount">0</span></h5>
+    </div>
 </div>
 
 <script src="/lib/require.js"></script>
