--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
     <script src="lib/quintus-all.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="css/concise.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
     <link rel="stylesheet" type="text/css" href="css/colors.css"/>
