--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-
+<script src="/lib/jquery-3.1.1.min.js"></script>
 <script src="/lib/require.js"></script>
 <script src="src/game.js"></script>
 </body>
