Add a stack feature when in pool, increment score the more you stay in pool. Change leaderboard : if your score is in top 5, it gets in bold font-weight.

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div row class="primary-background shadow-soft">
-        <h5 id="own_score" class="white-foreground">SCORE : <span id="score_amount">0</span></h5>
+        <h5 id="own_score" class="white-foreground">SCORE : <span id="score_amount">0</span> STACK : <span id="stack_amount">0</span></h5>
     </div>
     <div row id="cooldown_row">
         <div id="cooldown_display" class="progress progress--striped progress--animate"
