--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" type="text/css" href="css/colors.css"/>
 </head>
 <body>
+<div container id="upgrade_menu">
+    <div row>
+        <button onclick="inc_atq()" class="accent-background hover_primary tooltip--right" data-hint="atq">1</button>
+    </div>
+    <div row>
+        <button onclick="inc_range()" class="accent-background hover_primary tooltip--right" data-hint="range">2</button>
+    </div>
+    <div row>
+        <button onclick="inc_regen()" class="accent-background hover_primary tooltip--right" data-hint="hp regen">3</button>
+    </div>
+</div>
 <div id="scoreboard" class="primary-background shadow">
     <ul class="list--unstyled" id="score_list">
         <li id="score_row_1"></li>
