Use icons for the upgrades and resize upgrade buttons. Add a little code to be able to keep focus on game when clicking on buttons etc. (avoid to force player to reclick on screen after upgrading, etc)

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
 <body>
 <div container id="upgrade_menu">
     <div row>
-        <button onclick="inc_atq()" class="accent-background hover_primary tooltip--right" data-hint="atq">1</button>
+        <button onclick="inc_atq()" class="accent-background hover_white tooltip--right button--xsm" data-hint="attack"><img src="images/atk.png"></button>
     </div>
     <div row>
-        <button onclick="inc_range()" class="accent-background hover_primary tooltip--right" data-hint="range">2</button>
+        <button onclick="inc_range()" class="accent-background hover_white tooltip--right button--xsm" data-hint="range"><img src="images/range.png"></button>
     </div>
     <div row>
-        <button onclick="inc_regen()" class="accent-background hover_primary tooltip--right" data-hint="hp regen">3</button>
+        <button onclick="inc_regen()" class="accent-background hover_white tooltip--right button--xsm" data-hint="life regeneration"><img src="images/regen.png"></button>
     </div>
 </div>
 <div id="scoreboard" class="primary-background shadow">
