--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,27 @@
+<!--
+Copyright (C) 2016  Thomas Lebrun
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+
+Icons made by game-icons. Available on http://game-icons.net
+
+-->
+
+
+
+
 <html>
 <head>
     <script src="lib/quintus-all.js"></script>
@@ -36,6 +60,10 @@
         <div class="modal-body">
             <input id="pseudo" placeholder="Choose a nickname...">
             <button onclick="play();" id="play_button" class="big_button accent-background hover_primary">play</button>
+        </div>
+        <div class="modal-footer">
+            <p class="float--left">Copyright (C) 2016  Thomas Lebrun</p>
+            <p class="float--right">Icons made by game-icons. Available on http://game-icons.net</p>
         </div>
     </div>
 </div>
