change for wavelings part 2

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@ Icons made by game-icons. Available on http://game-icons.net
 <head>
     <script src="lib/quintus-all.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <title>Wavelings</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="css/concise.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
@@ -55,7 +56,7 @@ Icons made by game-icons. Available on http://game-icons.net
 <div id="modal" class="login_box_back">
     <div class="login_box_container">
         <div class="modal-header primary-background white-foreground">
-            IO GAME : Join the game !
+            Wavelings.xyz : Join the game !
         </div>
         <div class="modal-body">
             <input id="pseudo" placeholder="Choose a nickname...">
