Add sound. Make game smarter, only displaying and playing sound of on screen players. (Optimize game).

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,9 @@ Icons made by game-icons. Available on http://game-icons.net
             <p class="float--left">Copyright (C) 2016  Thomas Lebrun</p>
             <p class="float--right">Icons made by game-icons. Available on http://game-icons.net</p>
         </div>
+        <div>
+            <button id="sound_button" class="big_button primary-background white-foreground hover_accent" onclick="sound();">sound : ON</button>
+        </div>
     </div>
 </div>
 <div id="death-modal" class="login_box_back" style="visibility:hidden">
